<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructionTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_Txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".20" />

    <TextView
        android:id="@+id/targetTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/targetTxtNum"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="@id/instructionTxtView"
        app:layout_constraintStart_toStartOf="@id/instructionTxtView"
        app:layout_constraintTop_toBottomOf="@id/instructionTxtView"  />

    <TextView
        android:id="@+id/leftTxtBarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/leftTxtBarTxt"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toStartOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seekBar" />

    <TextView
        android:id="@+id/rightTxtBarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/rightTxtBarTxt"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekBar"
        app:layout_constraintTop_toTopOf="@id/seekBar" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightTxtBarView"
        app:layout_constraintStart_toEndOf="@id/leftTxtBarView"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/hit_me_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTxt"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="@id/seekBar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
